tests/sources/invalid/nullable/nullable_errors.fire
// Invalid tests: nullable errors
// EXPECT: compiler errors about invalid null usage

// Non-nullable variable initialized with null
a: int32 = null; // error  //~ ERROR FS-SEM-0010 @1

// Non-nullable string initialized with null
b: string = null; // error  //~ ERROR FS-SEM-0010 @1

// Non-nullable variable reassigned to null
c: int32 = 5;
c = null; // error  //~ ERROR FS-SEM-0010 @1
